--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
+<html lang="pt-BR">
 <head>
 <link rel="stylesheet" href="style.css" /> 
+<title>Youtube Video</title>
 </head>
 
 
 
 
 <body>
-
-<header>Youtube video</header>
-
+    <header>Youtube video</header>
+<section>
+       <div>
 <h1>O PIOR JEITO DE SE TOMAR UM BANHO!</h1>
 <p>#jazzghost</p>
+</div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/C6yNrN8DHTc?si=1nPzx5CS-_Wk_kim" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+<div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/C6yNrN8DHTc?si=1nPzx5CS-_Wk_kim" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
+ 
 </body>
+
+</html>
